--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 }
 #buttonsDiv{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 50%;
     margin:auto;
     margin-top:30px;
